--- a/config/Caddyfile
+++ b/config/Caddyfile
@@ -1,3 +1,10 @@
+{
+	http_port  80
+	https_port 443
+	debug
+}
+
+
 # The Caddyfile is an easy way to configure your Caddy web server.
 #
 # Unless the file starts with a global options block, the first
